--- a/ProxyScanSharp/ProxyScanSharp/ProxyScanSharp.csproj
+++ b/ProxyScanSharp/ProxyScanSharp/ProxyScanSharp.csproj
@@ -7,6 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="RandomDataGenerator.Net" Version="1.0.16" />
   </ItemGroup>
